# jammin

./: Pipfile  README.md  setup.cfg
example/interactive-sum/: challenge.toml  runner.py  solver.py
example/standard-sum/: challenge.toml  description.md  fastsolver.py  runner.py  solver.py
jammin/: attempt.py  checklist.py  command.py  configuration.py  db.py  exception.py  main.py  runner.py  server.py  ssh.py  stream.py  tcp.py  timing.py  user.py
misc/: sshsubmit.sh  submit.py  submit.sh
tests/: test_all.py
