[metadata]
name = jammin
version = attr: jammin.__version__
description = An ssh server for competitive programming
long_description = file: README.md
keywords = ssh, competitive programming
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_require = 3.7
setup_requires = setuptools
install_requires =
  asyncssh
  pygments
  structlog
  prompt_toolkit
  mdv
  sqlalchemy_aio
  toml
tests_require =
  pytest
  pytest-cov
  pytest-asyncio

[options.entry_points]
console_scripts = jammin=jammin.server:main

[tool:pytest]
addopts = --cov --cov-report term --cov-report html

[aliases]
test = pytest